# hello-ci-demo

./: CMakeLists.txt  README.md  hello.cpp
.github/workflows/: build.yml
profiles/: imx8mpevk
